# LogGen

./: .gitignore  CMakeLists.txt  README.md  REFACTORING.md  api_test.py  docs.py  prequency_test.py  vcpkg.json
.github/workflows/: build.yml
docs/AXGate/: AXGATE REST API 연동 v1.0.md  AXGATE 차단 프로세스.md
docs/Ahnlab/: AhnLab TrusGuard Open API 가이드-2020.12-Rev.5(TG 2.7.5 H4).md
docs/Ahnlab DPX/: AhnLab_DPX_REST_API_Guide_KR_2.0.11.md  AhnLab_DPX_REST_API_Guide_KR_2.0.8.md
docs/FortiGate/: FortiOS-5.6.11-Rest-API_Reference.md  FortiOS-6-0-4-REST-API-Reference.md  [KISA] 보안장비연계관리프로세스(Fortigate&AxGate).md  [호스트센터] 보안장비연계관리프로세스.md  참고사항.txt  포티넷FW 사용 매뉴얼.md
docs/Paloalto/: pan-os-panorama-api-v9.1.md  접속정보 및 참고 문서.docx  팔로알토 API CURL.txt
docs/Pentasecurity/: Pentasecurity_WAFFLES6.0_Malicious IP API 가이드.md  WAPPLES 5.0 Web API .md
docs/Piolink/: WEBFRONT-K-prestapi-r6-PLOS v2.0.59.0.6.md
docs/Secui/: MF2 V4.3.9_REST API 가이드.md  [SECUI] MFD REST API 가이드.md  [SECUI] SECUI MF2 V4.3.X REST API.md  [SECUI] SECUI MF2 V4.7.X REST API.md  법무부 Secui BlueMax 방화벽검증.md
docs/Secui/NGF V2.X_RESTAPI_공개용/Dashboard/: IPSec_VPN_위젯.md  SSL_VPN_위젯.md  국가별_정보.md  위젯_정보.md
docs/Secui/NGF V2.X_RESTAPI_공개용/Log-Report/: (별첨)컬럼정의서_현재상태.md  VPN_로그.md  관리자_로그.md  네트워크_상태.md  블랙리스트.md  시스템_로그.md  콘텐츠_보안_로그.md  콘텐츠_보안_상태.md
docs/Secui/NGF V2.X_RESTAPI_협약용(NDA)/: changelog.txt
docs/Somansa/: Webkeeper정책연동_RestAPI.md
docs/TnDSOFT/: TnD_MIBS_User_Manual.md  대용량유해IP차단솔루션(TnD-MIBS)+간략+자료_231102.md  유해IP차단시스템 API 명세서_v1.11.md
docs/WINS/: 윈스_TAXII_STIX_2.0_활용 안내서_v1.3_20200730.md
src/: main.cpp  resources.rc
src/core/: ApiMockRule.h  ApiRequestEntry.h  ApiTypes.h  Callbacks.h  Constants.h  DeviceProfile.h  LogEntry.h  LogFormat.h  LogFormatUtils.cpp  LogFormatUtils.h
src/core/channel/: ApiRequestBuffer.h  LockFreeLogBuffer.h  LogBuffer.h
src/engine/: ApiResponseEngine.cpp  ApiResponseEngine.h  ApiRouter.cpp  ApiRouter.h  ConnectionManager.cpp  ConnectionManager.h  FieldGenerator.cpp  FieldGenerator.h  FortinetRouter.cpp  FortinetRouter.h  GeneratorEngine.cpp  GeneratorEngine.h  IApiRouter.h  IGeneratorEngine.h  ISender.h  ISoarMockEngine.h  ISubRouter.h  LogDispatchQueue.h  LogTemplateEngine.cpp  LogTemplateEngine.h  MemoryPool.h  Mf2Router.cpp  Mf2Router.h  NexGfwRouter.cpp  NexGfwRouter.h  RateController.cpp  RateController.h  ScenarioSelector.h  SecuiRouter.cpp  SecuiRouter.h  SoarMockEngine.cpp  SoarMockEngine.h  SpamhausRouter.cpp  SpamhausRouter.h  TCPSender.cpp  TCPSender.h  TICategoryMapper.cpp  TICategoryMapper.h  TIPool.cpp  TIPool.h  (+11 more)
src/infrastructure/: HttpReceiver.cpp  HttpReceiver.h  IReceiver.h
src/logging/: Logger.cpp  Logger.h
src/persistence/: DefaultProfileFactory.cpp  DefaultProfileFactory.h  SessionManager.cpp  SessionManager.h
src/ui/: AppWindow.cpp  AppWindow.h  DevicePanel.cpp  DevicePanel.h  EventPanel.cpp  EventPanel.h  MonitorPanel.cpp  MonitorPanel.h  SoarMockPanel.cpp  SoarMockPanel.h  UIConstants.h
src/ui/viewmodel/: AppViewModel.cpp  AppViewModel.h  DevicePanelViewModel.cpp  DevicePanelViewModel.h  EventPanelViewModel.cpp  EventPanelViewModel.h  MonitorPanelViewModel.cpp  MonitorPanelViewModel.h  TimeSeriesData.h
templates/: checkpoint_quantum_threat_v1_kvp.json  checkpoint_quantum_threat_v2_kvp.json  checkpoint_quantum_traffic_v1_kvp.json  checkpoint_quantum_traffic_v2_kvp.json  checkpoint_quantum_traffic_v3_kvp.json  checkpoint_quantum_traffic_v4_kvp.json  checkpoint_quantum_traffic_v5_kvp.json  checkpoint_quantum_traffic_v6_kvp.json  checkpoint_quantum_traffic_v7_kvp.json  cisco_asa_security_v10_syslog.json  cisco_asa_security_v2_syslog.json  cisco_asa_security_v4_syslog.json  cisco_asa_security_v6_syslog.json  cisco_asa_security_v9_syslog.json  cisco_firepower_security_v1_kvp.json  custom_scenario_sample.json  fortinet_demo.json  fortinet_fg200e_system_v1_kvp.json  fortinet_fgt_event_v1_kvp.json  fortinet_fgt_event_v2_cef.json  fortinet_fgt_event_v2_kvp.json  fortinet_fgt_event_v3_kvp.json  fortinet_fgt_event_v4_kvp.json  fortinet_fgt_event_v5_kvp.json  fortinet_fgt_security_v1_kvp.json  fortinet_fgt_security_v2_kvp.json  fortinet_fgt_security_v3_kvp.json  fortinet_fgt_security_v4_kvp.json  fortinet_fgt_security_v5_kvp.json  fortinet_fgt_security_v6_kvp.json  fortinet_fgt_security_v7_kvp.json  fortinet_fgt_system_kvp.json  fortinet_fgt_traffic_cef.json  fortinet_fgt_traffic_v1_kvp.json  fortinet_fgt_traffic_v2_kvp.json  fortinet_fgt_traffic_v3_kvp.json  fortinet_fgt_traffic_v4_kvp.json  fortinet_fgt_traffic_v5_kvp.json  fortinet_fgt_traffic_v6_kvp.json  fortinet_fortiedr_security_cef.json  (+10 more)
templates/api_mocks/: edr_isolate.json  fortigate_block.json  generic_200ok.json  paloalto_block.json  ti_hash_lookup.json
ti_data/: malicious_ips.csv
(+223 files in other folders)
